[package]
name = "tcrelay"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", default-features = false, features = ["derive", "std", "env", "help", "usage"] }
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread", "tokio-macros", "macros"] }
