[package]
name = "tcrelay"
version = "0.1.0"
license = "AGPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", default-features = false, features = ["derive", "std", "env", "help", "usage"] }
http = { version = "1.0.0", default-features = false }
http-body-util = "0.1.0"
hyper = { version = "1.1.0", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1.3", features = ["tokio"] }
lazy_static = "1.4.0"
parking_lot = "0.12.3"
rustls-pemfile = "2.1.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "tokio-macros", "macros"] }
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring", "tls12"] }
webpki-roots = "0.26.1"

[features]
log = []

[dev-dependencies]
futures = { version = "0.3.30", default-features = false }

[profile.smol]
inherits = "release"
opt-level = "z"
panic = "abort"
strip = true
lto = true
